fix x overflow on Firefox on Windows w/ Windows 10 scrollbars enabled

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -102,7 +102,7 @@ h1.motto {
 }
 
 .comeToTheDarkSide {
-  width: 100vw;
+  width: 100%;
   padding: 6rem 10%;
 
   .cyberThings {
@@ -295,7 +295,7 @@ h1.motto {
 }
 
 .weHaveCookies {
-  width: 100vw;
+  width: 100%;
   padding: 0 10% 16rem 10%;
 
   .socials {
